v1.1.0/modules/schema/pages/class/GovHydro1.adoc
= `GovHydro1`
:toclevels: 4


+++Basic hydro turbine governor.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovHydro1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovHydro1`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<at,`at`>>
//| [[slots_table.at]]<<at,`at`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine gain (<i>At</i>) (&gt; 0).  Typical value = 1,2.+++
| _n/a_

| <<dturb,`dturb`>>
//| [[slots_table.dturb]]<<dturb,`dturb`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine damping factor (<i>Dturb</i>) (&gt;= 0).  Typical value = 0,5.+++
| _n/a_

| <<gmax,`gmax`>>
//| [[slots_table.gmax]]<<gmax,`gmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum gate opening (<i>Gmax</i>) (&gt; 0 and &gt; GovHydro.gmin).  Typical value = 1.+++
| _n/a_

| <<gmin,`gmin`>>
//| [[slots_table.gmin]]<<gmin,`gmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum gate opening (<i>Gmin</i>) (&gt;= 0 and &lt; GovHydro1.gmax).  Typical value = 0.+++
| _n/a_

| <<hdam,`hdam`>>
//| [[slots_table.hdam]]<<hdam,`hdam`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine nominal head (<i>hdam</i>).  Typical value = 1.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<qnl,`qnl`>>
//| [[slots_table.qnl]]<<qnl,`qnl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++No-load flow at nominal head (<i>qnl</i>) (&gt;= 0).  Typical value = 0,08.+++
| _n/a_

| <<rperm,`rperm`>>
//| [[slots_table.rperm]]<<rperm,`rperm`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Permanent droop (<i>R</i>) (&gt; 0).  Typical value = 0,04.+++
| _n/a_

| <<rtemp,`rtemp`>>
//| [[slots_table.rtemp]]<<rtemp,`rtemp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Temporary droop (<i>r</i>) (&gt; GovHydro1.rperm).  Typical value = 0,3.+++
| _n/a_

| <<tf,`tf`>>
//| [[slots_table.tf]]<<tf,`tf`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant (<i>Tf</i>) (&gt; 0).  Typical value = 0,05.+++
| _n/a_

| <<tg,`tg`>>
//| [[slots_table.tg]]<<tg,`tg`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Gate servo time constant (<i>Tg</i>) (&gt; 0).  Typical value = 0,5.+++
| _n/a_

| <<tr,`tr`>>
//| [[slots_table.tr]]<<tr,`tr`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tr</i>) (&gt; 0).  Typical value = 5.+++
| _n/a_

| <<tw,`tw`>>
//| [[slots_table.tw]]<<tw,`tw`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Water inertia time constant (<i>Tw</i>) (&gt; 0).  Typical value = 1.+++
| _n/a_

| <<velm,`velm`>>
//| [[slots_table.velm]]<<velm,`velm`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum gate velocity (<i>Vlem</i>) (&gt; 0).  Typical value = 0,2.+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#at]
=== `at`
+++Turbine gain (<i>At</i>) (&gt; 0).  Typical value = 1,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.at`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.at,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dturb]
=== `dturb`
+++Turbine damping factor (<i>Dturb</i>) (&gt;= 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.dturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dturb,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#gmax]
=== `gmax`
+++Maximum gate opening (<i>Gmax</i>) (&gt; 0 and &gt; GovHydro.gmin).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.gmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gmax,&#10548;>>
--
////


//[discrete]
[#gmin]
=== `gmin`
+++Minimum gate opening (<i>Gmin</i>) (&gt;= 0 and &lt; GovHydro1.gmax).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.gmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gmin,&#10548;>>
--
////


//[discrete]
[#hdam]
=== `hdam`
+++Turbine nominal head (<i>hdam</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.hdam`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.hdam,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#qnl]
=== `qnl`
+++No-load flow at nominal head (<i>qnl</i>) (&gt;= 0).  Typical value = 0,08.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.qnl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.qnl,&#10548;>>
--
////


//[discrete]
[#rperm]
=== `rperm`
+++Permanent droop (<i>R</i>) (&gt; 0).  Typical value = 0,04.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.rperm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rperm,&#10548;>>
--
////


//[discrete]
[#rtemp]
=== `rtemp`
+++Temporary droop (<i>r</i>) (&gt; GovHydro1.rperm).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.rtemp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rtemp,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tf]
=== `tf`
+++Filter time constant (<i>Tf</i>) (&gt; 0).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf,&#10548;>>
--
////


//[discrete]
[#tg]
=== `tg`
+++Gate servo time constant (<i>Tg</i>) (&gt; 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.tg`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tg,&#10548;>>
--
////


//[discrete]
[#tr]
=== `tr`
+++Washout time constant (<i>Tr</i>) (&gt; 0).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tr,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#tw]
=== `tw`
+++Water inertia time constant (<i>Tw</i>) (&gt; 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.tw`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw,&#10548;>>
--
////


//[discrete]
[#velm]
=== `velm`
+++Maximum gate velocity (<i>Vlem</i>) (&gt; 0).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro1.velm`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.velm,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
